--- a/CyberBazaECommerce/appsettings.json
+++ b/CyberBazaECommerce/appsettings.json
@@ -10,8 +10,15 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "cyberbaza"
   },
+  "SmtpSettings": {
+    "Server": "smtp.mail.ru",
+    "Port": "587",
+    "Username": "den_tkachenk0@mail.ru",
+    "Password": "fQCkc00a80jWEgcrxf5N",
+    "EmailFrom": "den_tkachenk0@mail.ru"
+  },
   "Jwt": {
-    "Key": "your_secret_key_that_should_be_very_long_and_secure",
+    "Key": "cyberbaza_by_Tkachenko_Denis_React and ASP.NET_ Dev!",
     "Issuer": "your_issuer",
     "Audience": "your_audience",
     "ExpireMinutes": 4320
